class/assignments/PA3/cool.y
/*
*  cool.y
*              Parser definition for the COOL language.
*
*/
%{
  #include <iostream>
  #include "cool-tree.h"
  #include "stringtab.h"
  #include "utilities.h"

  extern char *curr_filename;


  /* Locations */
  #define YYLTYPE int              /* the type of locations */
  #define cool_yylloc curr_lineno  /* use the curr_lineno from the lexer
  for the location of tokens */

    extern int node_lineno;          /* set before constructing a tree node
    to whatever you want the line number
    for the tree node to be */


      #define YYLLOC_DEFAULT(Current, Rhs, N)         \
      Current = Rhs[1];                             \
      node_lineno = Current;


    #define SET_NODELOC(Current)  \
    node_lineno = Current;

    /* IMPORTANT NOTE ON LINE NUMBERS
    *********************************
    * The above definitions and macros cause every terminal in your grammar to
    * have the line number supplied by the lexer. The only task you have to
    * implement for line numbers to work correctly, is to use SET_NODELOC()
    * before constructing any constructs from non-terminals in your grammar.
    */



    void yyerror(char *s);        /*  defined below; called for each parse error */
    extern int yylex();           /*  the entry point to the lexer  */

    /************************************************************************/
    /*                DONT CHANGE ANYTHING IN THIS SECTION                  */

    Program ast_root;	      /* the result of the parse  */
    Classes parse_results;        /* for use in semantic analysis */
    int omerrs = 0;               /* number of errors in lexing and parsing */
    %}

    /* A union of all the types that can be the result of parsing actions. */
    %union {
      Boolean boolean;
      Symbol symbol;
      Program program;
      Class_ class_;
      Classes classes;
      Feature feature;
      Features features;
      Formal formal;
      Formals formals;
      Case case_;
      Cases cases;
      Expression expression;
      Expressions expressions;
      char *error_msg;
    }

    /*
    Declare the terminals; a few have types for associated lexemes.
    The token ERROR is never used in the parser; thus, it is a parse
    error when the lexer returns it.

    The integer following token declaration is the numeric constant used
    to represent that token internally.  Typically, Bison generates these
    on its own, but we give explicit numbers to prevent version parity
    problems (bison 1.25 and earlier start at 258, later versions -- at
    257)
    */
    %token CLASS 258 ELSE 259 FI 260 IF 261 IN 262
    %token INHERITS 263 LET 264 LOOP 265 POOL 266 THEN 267 WHILE 268
    %token CASE 269 ESAC 270 OF 271 DARROW 272 NEW 273 ISVOID 274
    %token <symbol>  STR_CONST 275 INT_CONST 276
    %token <boolean> BOOL_CONST 277
    %token <symbol>  TYPEID 278 OBJECTID 279
    %token ASSIGN 280 NOT 281 LE 282 ERROR 283

    /*  DON'T CHANGE ANYTHING ABOVE THIS LINE, OR YOUR PARSER WONT WORK       */
    /**************************************************************************/

    /* Complete the nonterminal list below, giving a type for the semantic
    value of each non terminal. (See section 3.6 in the bison
    documentation for details). */

    /* Declare types for the grammar's non-terminals. */
    %type <program> program
    %type <classes> class_list
    %type <class_> class
    %type <features> feature_list
    %type <feature> feature
    %type <formals> formal_list
    %type <formal> formal
    %type <expression> expr
    %type <expressions> expr_list
    %type <expressions> expr_block
    %type <cases> case_list
    %type <case_> branch

    /****************** START OF CHANGE ******************/
    %type <expression> let_chain
    /****************** END OF CHANGE ******************/


    /* Precedence declarations go here. Lowest precedence first. */
    %right ASSIGN
    %right NOT
    %nonassoc LE '<' '='
    %left '+' '-'
    %left '*' '/'
    %right ISVOID
    %right '~'
    %left '@'
    %left '.'


    %%
    /*
    Save the root of the abstract syntax tree in a global variable.
    */
    program	: class_list	{ @$ = @1; ast_root = program($1); }
    ;

    class_list
    : class			/* single class */
    { $$ = single_Classes($1);
    parse_results = $$; }
    | class_list class	/* several classes */
    { $$ = append_Classes($1,single_Classes($2));
    parse_results = $$; }
    | class_list error ';'  /* skip malformed class and continue */
    { $$ = $1; 
      parse_results = $$; }
    ;

    /* If no parent is specified, the class inherits from the Object class. */
    class	: CLASS TYPEID '{' feature_list '}' ';'
    {   SET_NODELOC(@1);
        $$ = class_($2,idtable.add_string("Object"),$4,
        stringtable.add_string(curr_filename)); }
    | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    {   SET_NODELOC(@1);
        $$ = class_($2,$4,$6,stringtable.add_string(curr_filename)); }
    | CLASS TYPEID '{' error '}' ';'
    {   yyerror("error in feature list");
        /* Error recovery: create a dummy class node */
        SET_NODELOC(@1);
        $$ = class_($2, idtable.add_string("Object"), nil_Features(), stringtable.add_string(curr_filename));
    }
    ;

    /* Feature list may be empty, but no empty features in list. */
    feature_list:		/* empty */
    {  $$ = nil_Features(); }
    | feature_list feature ';'
    {  $$ = append_Features($1, single_Features($2)); }
    ;

    feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
    {   SET_NODELOC(@1);
        $$ = method($1, $3, $6, $8); }
    | OBJECTID ':' TYPEID
    {   int saved_line = node_lineno;
        node_lineno = 0;
        Expression no_expr_node = no_expr();
        node_lineno = @1;  // 使用属性名的位置作为attr节点的行号
        $$ = attr($1, $3, no_expr_node); }
    | OBJECTID ':' TYPEID ASSIGN expr
    {   SET_NODELOC(@1);
        $$ = attr($1, $3, $5); }
    ;

    formal_list: /* empty */
    {   $$ = nil_Formals(); }
    | formal
    {   $$ = single_Formals($1); }
    | formal_list ',' formal
    {   $$ = append_Formals($1, single_Formals($3)); }
    ;

    formal: OBJECTID ':' TYPEID
    {   SET_NODELOC(@1);
        $$ = formal($1, $3); }
    ;

    expr_block: expr ';'
    {   $$ = single_Expressions($1); }
    | expr_block expr ';'
    {   $$ = append_Expressions($1, single_Expressions($2)); }
    ;

    expr_list: /* empty */
    {   $$ = nil_Expressions(); }
    | expr
    {   $$ = single_Expressions($1); }
    | expr_list ',' expr
    {   $$ = append_Expressions($1, single_Expressions($3)); }
    ;

    case_list: branch
    {   $$ = single_Cases($1); }
    | case_list branch
    {   $$ = append_Cases($1, single_Cases($2)); }
    ;

    branch: OBJECTID ':' TYPEID DARROW expr ';'
    {   SET_NODELOC(@1);
        $$ = branch($1, $3, $5); }
    ;


    expr: OBJECTID ASSIGN expr
    {   SET_NODELOC(@1);
        $$ = assign($1, $3); }
    | expr '.' OBJECTID '(' expr_list ')'
    {   SET_NODELOC(@1);
        $$ = dispatch($1, $3, $5); }
    | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
    {   SET_NODELOC(@1);
        $$ = static_dispatch($1, $3, $5, $7); }
    | OBJECTID '(' expr_list ')'
    {   SET_NODELOC(@1);
        $$ = dispatch(object(idtable.add_string("self")), $1, $3); }
    | IF expr THEN expr ELSE expr FI
    {   SET_NODELOC(@1);
        $$ = cond($2, $4, $6); }
    | WHILE expr LOOP expr POOL
    {   SET_NODELOC(@1);
        $$ = loop($2, $4); }
    | '{' expr_block '}'
    {   SET_NODELOC(@1);
        $$ = block($2); }
    
    /****************** START OF CHANGE ******************/
    /* NEW RULE FOR LET EXPRESSIONS */
    | LET let_chain
    {   SET_NODELOC(@1);
        $$ = $2; }
    /****************** END OF CHANGE ******************/

    | CASE expr OF case_list ESAC
    {   SET_NODELOC(@1);
        $$ = typcase($2, $4); }
    | NEW TYPEID
    {   SET_NODELOC(@1);
        $$ = new_($2); }
    | ISVOID expr
    {   SET_NODELOC(@1);
        $$ = isvoid($2); }
    | expr '+' expr
    {   SET_NODELOC(@1);
        $$ = plus($1, $3); }
    | expr '-' expr
    {   SET_NODELOC(@1);
        $$ = sub($1, $3); }
    | expr '*' expr
    {   SET_NODELOC(@1);
        $$ = mul($1, $3); }
    | expr '/' expr
    {   SET_NODELOC(@1);
        $$ = divide($1, $3); }
    | '~' expr
    {   SET_NODELOC(@1);
        $$ = neg($2); }
    | expr '<' expr
    {   SET_NODELOC(@1);
        $$ = lt($1, $3); }
    | expr LE expr
    {   SET_NODELOC(@1);
        $$ = leq($1, $3); }
    | expr '=' expr
    {   SET_NODELOC(@1);
        $$ = eq($1, $3); }
    | NOT expr
    {   SET_NODELOC(@1);
        $$ = comp($2); }
    | '(' expr ')'
    {   SET_NODELOC(@1);
        $$ = $2; }
    | OBJECTID
    {   SET_NODELOC(@1);
        $$ = object($1); }
    | INT_CONST
    {   SET_NODELOC(@1);
        $$ = int_const($1); }
    | STR_CONST
    {   SET_NODELOC(@1);
        $$ = string_const($1); }
    | BOOL_CONST
    {   SET_NODELOC(@1);
        $$ = bool_const($1); }
    ;

    /****************** START OF CHANGE ******************/
    /* NEW NON-TERMINAL FOR HANDLING SINGLE AND MULTIPLE LET BINDINGS */
    let_chain: OBJECTID ':' TYPEID IN expr
    {   SET_NODELOC(@1);
        int saved_line = node_lineno;
        node_lineno = 0;
        Expression no_expr_node = no_expr();
        node_lineno = saved_line;
        $$ = let($1, $3, no_expr_node, $5); }
    | OBJECTID ':' TYPEID ASSIGN expr IN expr
    {   SET_NODELOC(@1);
        $$ = let($1, $3, $5, $7); }
    | OBJECTID ':' TYPEID ',' let_chain
    {   SET_NODELOC(@1);
        int saved_line = node_lineno;
        node_lineno = 0;
        Expression no_expr_node = no_expr();
        node_lineno = saved_line;
        $$ = let($1, $3, no_expr_node, $5); }
    | OBJECTID ':' TYPEID ASSIGN expr ',' let_chain
    {   SET_NODELOC(@1);
        $$ = let($1, $3, $5, $7); }
    ;
    /****************** END OF CHANGE ******************/


    /* end of grammar */
    %%

    /* This function is called automatically when Bison detects a parse error. */
    void yyerror(char *s)
    {
      extern int curr_lineno;

      cerr << "\"" << curr_filename << "\", line " << curr_lineno << ": " \
      << s << " at or near ";
      print_cool_token(yychar);
      cerr << endl;
      omerrs++;

      if(omerrs>50) {fprintf(stdout, "More than 50 errors\n"); exit(1);}
    }
