class/assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


State 124 conflicts: 9 shift/reduce
State 135 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | class_list error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID '{' error '}' ';'

    8 feature_list: ε
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr

   13 formal_list: ε
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 expr_block: expr ';'
   18           | expr_block expr ';'

   19 expr_list: ε
   20          | expr
   21          | expr_list ',' expr

   22 case_list: branch
   23          | case_list branch

   24 branch: OBJECTID ':' TYPEID DARROW expr ';'

   25 expr: OBJECTID ASSIGN expr
   26     | expr '.' OBJECTID '(' expr_list ')'
   27     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   28     | OBJECTID '(' expr_list ')'
   29     | IF expr THEN expr ELSE expr FI
   30     | WHILE expr LOOP expr POOL
   31     | '{' expr_block '}'
   32     | LET let_chain
   33     | CASE expr OF case_list ESAC
   34     | NEW TYPEID
   35     | ISVOID expr
   36     | expr '+' expr
   37     | expr '-' expr
   38     | expr '*' expr
   39     | expr '/' expr
   40     | '~' expr
   41     | expr '<' expr
   42     | expr LE expr
   43     | expr '=' expr
   44     | NOT expr
   45     | '(' expr ')'
   46     | OBJECTID
   47     | INT_CONST
   48     | STR_CONST
   49     | BOOL_CONST

   50 let_chain: OBJECTID ':' TYPEID IN expr
   51          | OBJECTID ':' TYPEID ASSIGN expr IN expr
   52          | OBJECTID ':' TYPEID ',' let_chain
   53          | OBJECTID ':' TYPEID ASSIGN expr ',' let_chain


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 26 27 28 45
    ')' (41) 10 26 27 28 45
    '*' (42) 38
    '+' (43) 36
    ',' (44) 15 21 52 53
    '-' (45) 37
    '.' (46) 26 27
    '/' (47) 39
    ':' (58) 10 11 12 16 24 50 51 52 53
    ';' (59) 4 5 6 7 9 17 18 24
    '<' (60) 41
    '=' (61) 43
    '@' (64) 27
    '{' (123) 5 6 7 10 31
    '}' (125) 5 6 7 10 31
    '~' (126) 40
    error (256) 4 7
    CLASS (258) 5 6 7
    ELSE (259) 29
    FI (260) 29
    IF (261) 29
    IN (262) 50 51
    INHERITS (263) 6
    LET (264) 32
    LOOP (265) 30
    POOL (266) 30
    THEN (267) 29
    WHILE (268) 30
    CASE (269) 33
    ESAC (270) 33
    OF (271) 33
    DARROW (272) 24
    NEW (273) 34
    ISVOID (274) 35
    STR_CONST <symbol> (275) 48
    INT_CONST <symbol> (276) 47
    BOOL_CONST <boolean> (277) 49
    TYPEID <symbol> (278) 5 6 7 10 11 12 16 24 27 34 50 51 52 53
    OBJECTID <symbol> (279) 10 11 12 16 24 25 26 27 28 46 50 51 52 53
    ASSIGN (280) 12 25 51 53
    NOT (281) 44
    LE (282) 42
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3 4
    class <class_> (48)
        on left: 5 6 7
        on right: 2 3
    feature_list <features> (49)
        on left: 8 9
        on right: 5 6 9
    feature <feature> (50)
        on left: 10 11 12
        on right: 9
    formal_list <formals> (51)
        on left: 13 14 15
        on right: 10 15
    formal <formal> (52)
        on left: 16
        on right: 14 15
    expr_block <expressions> (53)
        on left: 17 18
        on right: 18 31
    expr_list <expressions> (54)
        on left: 19 20 21
        on right: 21 26 27 28
    case_list <cases> (55)
        on left: 22 23
        on right: 23 33
    branch <case_> (56)
        on left: 24
        on right: 22 23
    expr <expression> (57)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 10 12 17 18 20 21 24 25 26 27 29 30 33 35 36 37 38 39 40 41 42 43 44 45 50 51 53
    let_chain <expression> (58)
        on left: 50 51 52 53
        on right: 32 52 53


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    5 class: CLASS • TYPEID '{' feature_list '}' ';'
    6      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS • TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: class_list •
    3 class_list: class_list • class
    4           | class_list • error ';'

    error  shift, and go to state 7
    CLASS  shift, and go to state 1

    $end  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    5 class: CLASS TYPEID • '{' feature_list '}' ';'
    6      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID • '{' error '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 6

    0 $accept: program $end •

    $default  accept


State 7

    4 class_list: class_list error • ';'

    ';'  shift, and go to state 11


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 10

    5 class: CLASS TYPEID '{' • feature_list '}' ';'
    7      | CLASS TYPEID '{' • error '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 8 (feature_list)
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 14


State 11

    4 class_list: class_list error ';' •

    $default  reduce using rule 4 (class_list)


State 12

    6 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 15


State 13

    7 class: CLASS TYPEID '{' error • '}' ';'

    '}'  shift, and go to state 16


State 14

    5 class: CLASS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


State 15

    6 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 20


State 16

    7 class: CLASS TYPEID '{' error '}' • ';'

    ';'  shift, and go to state 21


State 17

   10 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID • ':' TYPEID
   12        | OBJECTID • ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 18

    5 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 24


State 19

    9 feature_list: feature_list feature • ';'

    ';'  shift, and go to state 25


State 20

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    9 feature_list: feature_list • feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 26

    feature  go to state 19


State 21

    7 class: CLASS TYPEID '{' error '}' ';' •

    $default  reduce using rule 7 (class)


State 22

   10 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 27

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 28
    formal       go to state 29


State 23

   11 feature: OBJECTID ':' • TYPEID
   12        | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 30


State 24

    5 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 25

    9 feature_list: feature_list feature ';' •

    $default  reduce using rule 9 (feature_list)


State 26

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 31


State 27

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 32


State 28

   10 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}'
   15 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 29

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 30

   11 feature: OBJECTID ':' TYPEID •
   12        | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 11 (feature)


State 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 32

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 36


State 33

   10 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 37


State 34

   15 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 27

    formal  go to state 38


State 35

   12 feature: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


State 36

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 37

   10 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 54


State 38

   15 formal_list: formal_list ',' formal •

    $default  reduce using rule 15 (formal_list)


State 39

   29 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 55


State 40

   32 expr: LET • let_chain

    OBJECTID  shift, and go to state 56

    let_chain  go to state 57


State 41

   30 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 58


State 42

   33 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 59


State 43

   34 expr: NEW • TYPEID

    TYPEID  shift, and go to state 60


State 44

   35 expr: ISVOID • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


State 45

   48 expr: STR_CONST •

    $default  reduce using rule 48 (expr)


State 46

   47 expr: INT_CONST •

    $default  reduce using rule 47 (expr)


State 47

   49 expr: BOOL_CONST •

    $default  reduce using rule 49 (expr)


State 48

   25 expr: OBJECTID • ASSIGN expr
   28     | OBJECTID • '(' expr_list ')'
   46     | OBJECTID •

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 46 (expr)


State 49

   44 expr: NOT • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 64


State 50

   40 expr: '~' • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 65


State 51

   31 expr: '{' • expr_block '}'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr_block  go to state 66
    expr        go to state 67


State 52

   45 expr: '(' • expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 68


State 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr •
   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 12 (feature)


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 78


State 55

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   29     | IF expr • THEN expr ELSE expr FI
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    THEN  shift, and go to state 79
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 56

   50 let_chain: OBJECTID • ':' TYPEID IN expr
   51          | OBJECTID • ':' TYPEID ASSIGN expr IN expr
   52          | OBJECTID • ':' TYPEID ',' let_chain
   53          | OBJECTID • ':' TYPEID ASSIGN expr ',' let_chain

    ':'  shift, and go to state 80


State 57

   32 expr: LET let_chain •

    $default  reduce using rule 32 (expr)


State 58

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   30     | WHILE expr • LOOP expr POOL
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    LOOP  shift, and go to state 81
    LE    shift, and go to state 69
    '<'   shift, and go to state 70
    '='   shift, and go to state 71
    '+'   shift, and go to state 72
    '-'   shift, and go to state 73
    '*'   shift, and go to state 74
    '/'   shift, and go to state 75
    '@'   shift, and go to state 76
    '.'   shift, and go to state 77


State 59

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | CASE expr • OF case_list ESAC
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    OF   shift, and go to state 82
    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77


State 60

   34 expr: NEW TYPEID •

    $default  reduce using rule 34 (expr)


State 61

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   35     | ISVOID expr •
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 35 (expr)


State 62

   25 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 83


State 63

   28 expr: OBJECTID '(' • expr_list ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 19 (expr_list)

    expr_list  go to state 84
    expr       go to state 85


State 64

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr
   44     | NOT expr •

    LE   shift, and go to state 69
    '<'  shift, and go to state 70
    '='  shift, and go to state 71
    '+'  shift, and go to state 72
    '-'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 44 (expr)


State 65

   26 expr: expr • '.' OBJECTID '(' expr_list ')'
   27     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'
   36     | expr • '+' expr
   37     | expr • '-' expr
   38     | expr • '*' expr
   39     | expr • '/' expr
   40     | '~' expr •
   41     | expr • '<' expr
   42     | expr • LE expr
   43     | expr • '=' expr

    '@'  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 40 (expr)


State 66

   18 expr_block: expr_block • expr ';'
   31 expr: '{' expr_block • '}'
